[package]
name = "rustees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.0"
async-std = "1"

# binaire pour lancer le serveur
# cargo run --bin serveur
[[bin]]
name = "serveur"
path = "src/serveur.rs"

# binaire pour lancer un client
# cargo run --bin client
[[bin]]
name = "client"
path = "src/client.rs"

# binaire dev pour comprendre les user's input
[[bin]]
name = "stdin"
path = "dev_prog_examples/stdin.rs"