[package]
name = "rustees"
rust-version = "1.66.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = "0.9.0"
hex = "0.4.3"
# binaire pour lancer le serveur
# cargo run --bin serveur
[[bin]]
name = "serveur"
path = "src/serveur.rs"

# binaire pour lancer un client
# cargo run --bin client
[[bin]]
name = "client"
path = "src/client.rs"

# binaire dev pour comprendre les user's input
[[bin]]
name = "stdin"
path = "dev_prog_examples/stdin.rs"
